ingredients overlapping fix

--- a/src/app/game/game.component.css
+++ b/src/app/game/game.component.css
@@ -101,6 +101,7 @@
     float:left;
     height:auto;
     overflow:hidden;
+    position: relative
 }
 .ingredient img{
     width:90%;
